--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # This file contains general application properties.
 # All properties that are environment specific are in their related property file (like database login data, logging level, etc.).
 #Spring
+spring.application.name=video-service
 spring.main.allow-bean-definition-overriding=true
 # Base URL of the application
 app.base.url=https://<host>
@@ -81,3 +82,7 @@ spring.jwt.auth.converter.principal-attribute: preferred_username
 
 springdoc.api-docs.enabled=false
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+management.zipkin.tracing.endpoint: http://localhost:9411/api/v2/spans
+management.tracing.enabled: true
+management.tracing.sampling.probability: 1
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
